# intellicore

./: .env.example  .env.production.example  .gitignore  AGENT_FIRST_ARCHITECTURE.md  AGENT_FIRST_FIXES_APPLIED.md  ARCHITECTURE_OWNER_AGENT_DESIGN.md  ARCHITECTURE_OWNER_AGENT_VALIDATION_REPORT.md  CHANGELOG.md  CI_CD_SETUP_COMPLETE.md  CLAUDE.md  CLAUDE.md.bak2  CONTRIBUTING.md  DEBUGGING_AGENT_VALIDATION_REPORT.md  EPIC-001_VALIDATION_REPORT.md  HYBRID_MIGRATION_PROGRESS.md  IMMEDIATE_ACTION_SUMMARY.md  IMPLEMENTATION_RAG_VECTOR.md  INTEGRATION_COMPLETE.md  LLM_AS_JUDGE_DESIGN.md  MIGRATION_COMPLETE.md  MONITORING_IMPLEMENTATION_COMPLETE.md  NextSkills.md  Notas.md  ORCHESTRATION_REIMPLEMENTATION_PLAN.md  ORQUESTRACAO_CELERY_PLANO_COMPLETO.md  PERFORMANCE_CHECKLIST.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_QUICK_REFERENCE.md  PHASE1_COMPLETE_SUMMARY.md  PHASE2_COMPLETE_SUMMARY.md  PHASE3_COMPLETE_SUMMARY.md  PHASE4_COMPLETE_SUMMARY.md  PHASE5_INTEGRATION_SUMMARY.md  PHASE7_DEPLOYMENT_COMPLETE.md  PROD-086-COMPLETE.md  PROJECT_STRUCTURE.txt  PROMPT_CACHING_IMPLEMENTATION.md  PROPOSTA_FASES.md  QUICKSTART_GRAPH_RAG.md  RAG_GRAPH_IMPLEMENTATION_COMPLETE.md  (+34 more)
.claude/: AUTONOMOUS_DEVELOPMENT_FRAMEWORK.md  AUTONOMOUS_MODE_GUIDE.md  project-config.json
Supercore_v2.0/: 1_VISAO_FINAL_CONSOLIDADA.md  INDEX.md  SuperCore - A Curva de Crescimento Exponencial.md  SuperCore - Visão 4.0.md  requisitos_funcionais_v2.0.md
VisaoInicialEscopo/: Atualização Funcional_ Integração Data Rudder e Fácil Tech.md  Especificação Detalhada_ Portal de Backoffice do Core Banking Inteligente.md  Especificação de Integração_ Interface Neural Sutil (Frontend) _-_ Core Banking (Backend).md  FASE_1_FUNDACAO_DETALHADA.md  OBJETIVO_FUNCIONAL_DA_PLATAFORMA.md  Plano de Implementação Técnica_ Interface Neural Sutil.md  ROADMAP_IMPLEMENTACAO_4_FASES.md  The Path_ Roadmap de Implementação do Core Banking Inteligente.md  Visao_Geral.md
app-generation/: README.md
architect-agent/: .env.example  README.md  SPRINT_7_COMPLETE.md  SPRINT_8_COMPLETE.md  pyproject.toml
architect-agent/src/: __init__.py  celery_app.py  config.py
architect-agent/src/api/: __init__.py  main.py
architect-agent/src/api/routes/: architect.py  health.py
architect-agent/src/database/: __init__.py  connection.py  repositories.py  schema.sql
architect-agent/src/document_intelligence/: __init__.py  ocr.py  parser.py  table_extractor.py  types.py
architect-agent/src/entity_extraction/: __init__.py  extractor.py  field_candidates.py  types.py
architect-agent/src/tasks/: crawler_tasks.py  document_tasks.py  schema_tasks.py
architect-agent/tests/: test_document_parser.py  test_entity_extraction.py
architect-agent/tests/fixtures/: README.md
backend/: .env.example  .gitignore  ASSISTANT_INTEGRATION.md  CI_CD_GUIDE.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  MAIN_INTEGRATION_SNIPPET.go  Makefile  QUICKSTART_TESTING.md  QUICK_START.md  RAG_SQL_IMPLEMENTATION_COMPLETE.md  SPRINT_5_ASSISTANT_README.md  TESTING.md  go.mod  go.sum  test_assistant.sh
client/: package-lock.json  package.json
docs/: API_REFERENCE.md  APRESENTACAO_EXECUTIVA_CONCEITUAL.md  APRESENTACAO_EXECUTIVA_CORE_BANKING_IA.md  CI_CD_PIPELINE.md  COREBANKING_BRAIN_USER_GUIDE.md  ESCOPO_GERAL_PROJETO.md  INDEX.md  ROADMAP_COMPLETO_5_FASES.md  ROADMAP_COMPLETO_6_FASES.md  SPRINT_3_RELATIONSHIP_VALIDATION_SUMMARY.md  SPRINT_4_ARCHITECTURE.md  THINK_HARDER_FUNDACAO_CORE_BANKING.md  The Blueprint_ Core Banking Inteligente 100% AI-Based.md
documentation-base/: RAG_PIPELINE_ARCHITECTURE.md  arquitetura_supercore_v2.0.md  intelliCore.md  (+2 more)
llm-gateway/: .env.example  Dockerfile  README.md  pyproject.toml
llm-gateway/app/: __init__.py  config.py  main.py
llm-gateway/app/api/: __init__.py  chat.py  crawler.py  health.py  models.py  monitoring.py  templates.py  validation.py
llm-gateway/app/models/: __init__.py  chat.py  model.py  template.py
llm-gateway/app/services/: __init__.py  monitoring.py  ollama.py  prompt_manager.py  web_crawler.py
llm-gateway/app/templates/prompts/: .gitkeep
llm-gateway/app/utils/: __init__.py
(+1037 files in other folders)
